syntax = "proto3";

package saffron.externalRuntime;

import "common/identity.proto";
import "task.proto";

message RuntimeOption {
  saffron.execution.TaskKey task_key = 1;
  string runtime_address = 2;
}

message RailwayErrorInner {
    string name = 1;
    string message = 2;
    string stack_trace = 3;
    optional saffron.common.VersionedIdentity logic_identity = 4;
}
